# calabru

./: .gitignore  LICENSE  README.md  api.html  calibrator.py  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  tutorials.html
.github/workflows/: publish.yml  sphinx_docs_to_gh_pages.yml
_modules/: index.html
_modules/calabru/: calibrator.html
_sources/notebooks/: example.ipynb.txt
calabru/: __init__.py  calibrator.py
docs/: requirement.txt  requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.md  tutorials.rst
docs/source/notebooks/: Untitled_update_output.txt  example.ipynb  intro.ipynb
notebooks/: example.html  intro.html
tests/: fixtures.py  test_updating.py
